--- a/html/emergencyfundcalc.html
+++ b/html/emergencyfundcalc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Fund Calculator</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="../css/style.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <style>
         /* General Body Styles for sticky footer layout */
         body {
