--- a/html/hysacalc.html
+++ b/html/hysacalc.html
@@ -143,7 +143,8 @@
 
         .chart-container canvas {
             max-width: 100%;
-            height: 250px; /* Adjust canvas height to fit container */
+            /* REMOVED: height: 250px; This was causing the elongation */
+            /* Chart.js will now manage its internal height based on its container and aspect ratio settings */
         }
 
 
